// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UsagePlan /> should render properly 1`] = `
Array [
  .emotion-0 {
  padding-bottom: 24px;
  font-size: 15px;
  line-height: 19px;
}

<h3
    className="emotion-0"
  >
    Usage Plan:
  </h3>,
  .emotion-6 {
  padding-bottom: 16px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 img {
  margin-right: 12px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 44px;
  font-family: Roboto Condensed;
}

.emotion-2 {
  color: #b3b3b3;
  padding-bottom: 2px;
}

.emotion-1 {
  font-weight: 700;
}

.emotion-4 {
  color: #cdf6a8;
}

<div
    className="emotion-6"
  >
    <h4
      className="emotion-0"
    >
      <img
        alt=""
        src="/icons/videos.png"
        width={32}
      />
       Video:
       
      300
       hours
    </h4>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-2"
      >
        Used:
         
        <span
          className="emotion-1"
        >
          100
          /hrs
        </span>
      </div>
      <div
        className="emotion-4"
      >
        Available:
         
        <span
          className="emotion-1"
        >
          200
          /hrs
        </span>
      </div>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 img {
  margin-right: 12px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 44px;
  font-family: Roboto Condensed;
}

.emotion-2 {
  color: #b3b3b3;
  padding-bottom: 2px;
}

.emotion-1 {
  font-weight: 700;
}

.emotion-4 {
  color: #cdf6a8;
}

.emotion-6 {
  padding-top: 16px;
  padding-bottom: 16px;
}

<div
    className="emotion-6"
  >
    <h4
      className="emotion-0"
    >
      <img
        alt=""
        src="/icons/images.png"
        width={32}
      />
       Image / Documents: 
      30,000
    </h4>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-2"
      >
        Used:
         
        <span
          className="emotion-1"
        >
          20,000
          
        </span>
      </div>
      <div
        className="emotion-4"
      >
        Available:
         
        <span
          className="emotion-1"
        >
          10,000
          
        </span>
      </div>
    </div>
  </div>,
  .emotion-6 {
  padding-top: 16px;
}

.emotion-0 {
  padding-bottom: 4px;
}

.emotion-5 {
  padding: 0;
  margin: 0;
  list-style: none;
}

.emotion-1 {
  font-family: Roboto Mono;
  color: #b3b3b3;
  padding-bottom: 2px;
}

<div
    className="emotion-6"
  >
    <h4
      className="emotion-0"
    >
      Additional Modules:
    </h4>
    <ul
      className="emotion-5"
    >
      <li
        className="emotion-1"
      >
        zmlp-classification
      </li>
      <li
        className="emotion-1"
      >
        zmlp-face-recognition
      </li>
      <li
        className="emotion-1"
      >
        shot-detection
      </li>
      <li
        className="emotion-1"
      >
        gcp-vision-text-detection
      </li>
    </ul>
  </div>,
]
`;

exports[`<UsagePlan /> should render properly with no modules 1`] = `
Array [
  .emotion-0 {
  padding-bottom: 24px;
  font-size: 15px;
  line-height: 19px;
}

<h3
    className="emotion-0"
  >
    Usage Plan:
  </h3>,
  .emotion-6 {
  padding-bottom: 16px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 img {
  margin-right: 12px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 44px;
  font-family: Roboto Condensed;
}

.emotion-2 {
  color: #b3b3b3;
  padding-bottom: 2px;
}

.emotion-1 {
  font-weight: 700;
}

.emotion-4 {
  color: #cdf6a8;
}

<div
    className="emotion-6"
  >
    <h4
      className="emotion-0"
    >
      <img
        alt=""
        src="/icons/videos.png"
        width={32}
      />
       Video:
       
      300
       hours
    </h4>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-2"
      >
        Used:
         
        <span
          className="emotion-1"
        >
          100
          /hrs
        </span>
      </div>
      <div
        className="emotion-4"
      >
        Available:
         
        <span
          className="emotion-1"
        >
          200
          /hrs
        </span>
      </div>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 img {
  margin-right: 12px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 44px;
  font-family: Roboto Condensed;
}

.emotion-2 {
  color: #b3b3b3;
  padding-bottom: 2px;
}

.emotion-1 {
  font-weight: 700;
}

.emotion-4 {
  color: #cdf6a8;
}

.emotion-6 {
  padding-top: 16px;
  padding-bottom: 16px;
}

<div
    className="emotion-6"
  >
    <h4
      className="emotion-0"
    >
      <img
        alt=""
        src="/icons/images.png"
        width={32}
      />
       Image / Documents: 
      30,000
    </h4>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-2"
      >
        Used:
         
        <span
          className="emotion-1"
        >
          20,000
          
        </span>
      </div>
      <div
        className="emotion-4"
      >
        Available:
         
        <span
          className="emotion-1"
        >
          10,000
          
        </span>
      </div>
    </div>
  </div>,
  .emotion-2 {
  padding-top: 16px;
}

.emotion-0 {
  padding-bottom: 4px;
}

.emotion-1 {
  color: #b3b3b3;
  font-style: italic;
}

<div
    className="emotion-2"
  >
    <h4
      className="emotion-0"
    >
      Additional Modules:
    </h4>
    <span
      className="emotion-1"
    >
      None
    </span>
  </div>,
]
`;

exports[`<UsagePlan /> should render properly with over usage 1`] = `
Array [
  .emotion-3 {
  padding-bottom: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
}

.emotion-0 {
  font-weight: 400;
}

<div
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <svg
        color="#c92300"
        data-file-name="warning.svg"
        height={20}
      />
      <div
        className="emotion-1"
        role="alert"
      >
        <div
          className="emotion-0"
        >
          You are
           
          <strong>
            20
             hours over
          </strong>
           your video plan
           and 
          <strong>
            40
             assets over
          </strong>
           your image & documents plan
          . Contact your Account Manager to add more resources.
        </div>
      </div>
    </div>
  </div>,
  .emotion-0 {
  padding-bottom: 24px;
  font-size: 15px;
  line-height: 19px;
}

<h3
    className="emotion-0"
  >
    Usage Plan:
  </h3>,
  .emotion-6 {
  padding-bottom: 16px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 img {
  margin-right: 12px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 44px;
  font-family: Roboto Condensed;
}

.emotion-2 {
  color: #b3b3b3;
  padding-bottom: 2px;
}

.emotion-1 {
  font-weight: 700;
}

.emotion-4 {
  color: #cdf6a8;
}

<div
    className="emotion-6"
  >
    <h4
      className="emotion-0"
    >
      <img
        alt=""
        src="/icons/videos.png"
        width={32}
      />
       Video:
       
      300
       hours
    </h4>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-2"
      >
        Used:
         
        <span
          className="emotion-1"
        >
          320
          /hrs
        </span>
      </div>
      <div
        className="emotion-4"
      >
        Available:
         
        <span
          className="emotion-1"
        >
          -20
          /hrs
        </span>
      </div>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 img {
  margin-right: 12px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 44px;
  font-family: Roboto Condensed;
}

.emotion-2 {
  color: #b3b3b3;
  padding-bottom: 2px;
}

.emotion-1 {
  font-weight: 700;
}

.emotion-4 {
  color: #cdf6a8;
}

.emotion-6 {
  padding-top: 16px;
  padding-bottom: 16px;
}

<div
    className="emotion-6"
  >
    <h4
      className="emotion-0"
    >
      <img
        alt=""
        src="/icons/images.png"
        width={32}
      />
       Image / Documents: 
      30,000
    </h4>
    <div
      className="emotion-5"
    >
      <div
        className="emotion-2"
      >
        Used:
         
        <span
          className="emotion-1"
        >
          30,040
          
        </span>
      </div>
      <div
        className="emotion-4"
      >
        Available:
         
        <span
          className="emotion-1"
        >
          -40
          
        </span>
      </div>
    </div>
  </div>,
  .emotion-6 {
  padding-top: 16px;
}

.emotion-0 {
  padding-bottom: 4px;
}

.emotion-5 {
  padding: 0;
  margin: 0;
  list-style: none;
}

.emotion-1 {
  font-family: Roboto Mono;
  color: #b3b3b3;
  padding-bottom: 2px;
}

<div
    className="emotion-6"
  >
    <h4
      className="emotion-0"
    >
      Additional Modules:
    </h4>
    <ul
      className="emotion-5"
    >
      <li
        className="emotion-1"
      >
        zmlp-classification
      </li>
      <li
        className="emotion-1"
      >
        zmlp-face-recognition
      </li>
      <li
        className="emotion-1"
      >
        shot-detection
      </li>
      <li
        className="emotion-1"
      >
        gcp-vision-text-detection
      </li>
    </ul>
  </div>,
]
`;
